# seeq-addon-templates

./: .droid.yaml  .gitignore  MANIFEST.in  Makefile  README.md  __main__.py  add_on_tool.yaml  addon  addon.bat  addon.py  cookiecutter.json  copier.yaml  entrypoint.py  install_template  install_template.bat  make.bat  name-slug.jinja  pyproject.toml  requirements.txt  setup.py  sq-addon-template.py  uninstall_template  uninstall_template.bat  variables.bat  variables.sh
SOSG-template/: MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.py
_dev_tools/: utils.py
addOnProject/: .credentials.json  addon.json  ao.py
addon_pkg/: add_on_tool.yaml  addon.py  copier.py  copier.yaml
addon_template/: __main__.py  add_on_tool.yaml  cli.py  cookiecutter.json  copier.py  copier.yaml  data_lab_functions.yaml  formula_package.yaml  generator.py  plugin.yaml  tool_pane_plugin.yaml
hooks/: post_gen_project.py  pre_gen_project.py
includes/: addon-tool-slug.jinja  include_addonTool.jinja
mainFolder/: README.md  ao.py  scratch.json
seeq-myoldaddon/: addon.json  ao.py
sq_addon_template/: __main__.py  cli.py  cookiecutter.json
sq_addon_templatess/: __main__.py  cli.py
tool-plugin-example/: .copier-answers.yml  .gitignore  addon.json  requirements.txt
{% from pathjoin('includes', 'slug.jinja') import slugify %}{{ slugify(project_name) }}/: ao.py
{% include pathjoin('includes', 'name-slug.jinja') %}/: addon.json  addon.json.jinja
{% include pathjoin('includes', 'project-slug.jinja') %}/: addon.json.jinja
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  (+6 more)
(+176 files in other folders)
